--- a/default/ru.yml
+++ b/default/ru.yml
@@ -175,11 +175,11 @@ ru:
   lang:
     text: |
       *🌎 Выберите свой язык:*
-    en: 🇬🇧 Английский
+    en: 🇬🇧 English
     ru: 🇷🇺 Русский
-    tr: 🇹🇷 Турецкий
-    zh: 🇨🇳 Китайский
-    fa: 🇮🇷 Персидский
+    tr: 🇹🇷 Türkiye
+    zh: 🇨🇳 中文
+    fa: 🇮🇷 فارسی
   # --------------------------------------------------------
   lang_custom:
     text: |
