--- a/default/zh.yml
+++ b/default/zh.yml
@@ -146,9 +146,7 @@ zh:
       密码：
       `%<password>s`
 
-      (点击
-
-以复制 ^^)
+      (点击 以复制 ^^)
   # --------------------------------------------------------
   config_custom:
     text: |
@@ -177,11 +175,11 @@ zh:
   lang:
     text: |
       *🌎 选择您的语言:*
-    en: 🇬🇧 英语
-    ru: 🇷🇺 俄语
-    tr: 🇹🇷 土耳其语 
+    en: 🇬🇧 English
+    ru: 🇷🇺 Русский
+    tr: 🇹🇷 Türkiye
     zh: 🇨🇳 中文
-    fa: 🇮🇷 波斯语
+    fa: 🇮🇷 فارسی
   # --------------------------------------------------------
   lang_custom:
     text: |
