--- a/tbcc/tbcc_zh.yml
+++ b/tbcc/tbcc_zh.yml
@@ -51,7 +51,9 @@ tbcc_zh:
       *🌟 欢迎! 🌟*
 
       欢迎来到TBCC VPN - 在在线安全和匿名领域中您可靠的伙伴！我们感谢您的选择，我们的团队随时为您提供安全的网络连接。
+
       要开始使用VPN，只需点击下面的'配置'按钮以获取配置文件，然后安装到您的设备上。详细的说明可在我们的网站 https://tbccvpn.com 找到。所有选项也可通过运行 /help 命令访问。
+
       感谢您选择TBCC VPN。我们以确保您的在线之旅安全而匿名而感到自豪。设置您的连接并享受安全在线浏览的自由吧
   # --------------------------------------------------------
   sub_extended:
@@ -113,9 +115,7 @@ tbcc_zh:
 
       使用USDT支付的金额将根据美元进行计算。例如，只需发送 `49.99` USDT 即可支付12个月的费用。您可以发送任意金额，您的订阅期限将根据费用的比例自动计算。
 
-      为了确认您的支付，需要等待 *20个确认* 以确保交易完成。请稍等片刻。一旦交易被确认，您将收到通知。如果在等待10分钟后您的交易仍未得到确认，请
-
-与 @botstorm 联系。
+      为了确认您的支付，需要等待 *20个确认* 以确保交易完成。请稍等片刻。一旦交易被确认，您将收到通知。如果在等待10分钟后您的交易仍未得到确认，请 与 @botstorm 联系。
   # --------------------------------------------------------
   config:
     text: |
@@ -179,11 +179,11 @@ tbcc_zh:
   lang:
     text: |
       *🌎 选择语言:*
-    en: 🇬🇧 英语
-    ru: 🇷🇺 俄语
-    tr: 🇹🇷 土耳其语 
+    en: 🇬🇧 English
+    ru: 🇷🇺 Русский
+    tr: 🇹🇷 Türkiye
     zh: 🇨🇳 中文
-    fa: 🇮🇷 波斯语
+    fa: 🇮🇷 فارسی
   # --------------------------------------------------------
   lang_custom:
     text: |
