--- a/tbcc/tbcc_zh.yml
+++ b/tbcc/tbcc_zh.yml
@@ -183,7 +183,7 @@ tbcc_zh:
     ru: 🇷🇺 Русский
     tr: 🇹🇷 Türkiye
     zh: 🇨🇳 中文
-    fa: 🇮🇷 波斯语
+    fa: 🇮🇷 فارسی
   # --------------------------------------------------------
   lang_custom:
     text: |
